criaçao de service e lsitagem com get

--- a/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list.component.html
@@ -1,12 +1,9 @@
 <ion-list [inset]="true">
-  <ion-item>
-    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+  <ion-item *ngFor="let poke of pokemons">
+    <img
+      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/{{poke.entry_number}}.svg"
       width="60px" alt="">
-    <ion-label>Pokémon</ion-label>
+    <ion-label>{{ poke.pokemon_species.name }}</ion-label>
   </ion-item>
-  <ion-item>
-    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-      width="60px" alt="">
-    <ion-label>Pokémon</ion-label>
-  </ion-item>
+
 </ion-list>
