--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -6,9 +6,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-card>
-    <img alt="Silhouette of mountains"
-      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/{{pokemonId}}.svg"
-      class="image" />
+    <img alt="Silhouette of mountains" src="{{ pokeImage }}" class="image" />
     <ion-card-header>
       <ion-card-title class="title name">{{ pokemonName }}</ion-card-title>
       <div class="subtitles">
